# kernel

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
arch/aarch64/: Cargo.toml
arch/aarch64/crates/bring-up/: Cargo.toml
arch/aarch64/crates/bring-up/src/: lib.rs
arch/aarch64/src/: lib.rs  time.rs
arch/aarch64/src/boot/: boot.s  mod.rs
bsp/rpi3/: Cargo.toml  kernel.ld
bsp/rpi3/src/: arch.rs  lib.rs
device/pl011/: Cargo.toml
device/pl011/src/: lib.rs
lib-kernel/: Cargo.toml
lib-kernel/src/: lib.rs
src/: logging.rs  main.rs
