[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
aarch64.workspace = true
rpi3.workspace = true

[workspace]
members = ["arch/aarch64", "bsp/rpi3"]

[workspace.dependencies]
aarch64.path = "arch/aarch64"
rpi3.path = "bsp/rpi3"
