[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
aarch64.workspace = true
rpi3.workspace = true
pl011.workspace = true
lib-kernel.workspace = true
log.workspace = true
uom.workspace = true

[workspace]
members = ["arch/aarch64", "bsp/rpi3", "device/pl011", "lib-kernel"]
exclude = ["arch/aarch64/crates/bring-up"]

[workspace.dependencies]
aarch64.path = "arch/aarch64"
rpi3.path = "bsp/rpi3"
pl011.path = "device/pl011"

lib-kernel.path = "lib-kernel"

tock-registers = "0.9.0"
spin = "0.9.8"
log = "0.4.22"
uom = { version = "0.36.0", features = [
    "autoconvert",
    "f32",
    "f64",
    "u64",
    "si",
], default-features = false }
